# amsterdam-parking-bot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MIGRATION.md  README.md  README.new.md  SETUP_COMPLETE.md  amsterdam_parking_bot.py  config.example.json  park.py  pyproject.toml
.github/workflows/: ci.yml
src/amsterdam_parking/: __init__.py  __main__.py  bot.py  cli.py  config.py  models.py  session_calculator.py
src/amsterdam_parking/browser/: __init__.py  driver.py  pages.py
tests/: __init__.py  conftest.py  test_config.py  test_models.py  test_session_calculator.py
tests/unit/: test_session_calculator.py
