[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amsterdam-parking"
version = "2.0.0"
description = "Automated Amsterdam parking session booking with cost optimization"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Amsterdam Parking Bot Contributors" }
]
keywords = ["amsterdam", "parking", "automation", "selenium"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

dependencies = [
    "selenium>=4.26.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "click>=8.1.7",
    "rich>=13.9.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pre-commit>=4.0.0",
    "ipython>=8.29.0",
]

[project.scripts]
amsterdam-parking = "amsterdam_parking.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/amsterdam-parking-bot"
Repository = "https://github.com/yourusername/amsterdam-parking-bot"
Issues = "https://github.com/yourusername/amsterdam-parking-bot/issues"

# Hatchling configuration
[tool.hatch.build.targets.wheel]
packages = ["src/amsterdam_parking"]

[tool.hatch.version]
path = "src/amsterdam_parking/__init__.py"

# Ruff configuration (replaces black, isort, flake8, pylint)
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function call in argument defaults
    "B904",   # raise from
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["amsterdam_parking"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
pretty = true

[[tool.mypy.overrides]]
module = ["selenium.*"]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=amsterdam_parking",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
